timeware/src/objects/Payroll__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doubletime_Code__c</fullName>
        <label>Doubletime Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doubletime_Shift_Differential_Code__c</fullName>
        <label>Doubletime Shift Differential Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Path__c</fullName>
        <label>Export Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overtime_Code__c</fullName>
        <label>Overtime Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overtime_Shift_Differential_Code__c</fullName>
        <label>Overtime Shift Differential Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Code__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payroll_Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regular_Code__c</fullName>
        <label>Regular Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regular_Shift_Differential_Code__c</fullName>
        <label>Regular Shift Differential Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Payroll</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payroll Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payrolls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>